@@ -16,7 +16,6 @@ package com.starrocks.load;
 
 import com.google.common.collect.Lists;
 import com.google.common.collect.Range;
-import com.starrocks.catalog.ColocateTableIndex;
 import com.starrocks.catalog.Database;
 import com.starrocks.catalog.ListPartitionInfo;
 import com.starrocks.catalog.MaterializedIndex;
@@ -38,7 +37,6 @@ import com.starrocks.persist.PartitionPersistInfoV2;
 import com.starrocks.persist.RangePartitionPersistInfo;
 import com.starrocks.persist.SinglePartitionPersistInfo;
 import com.starrocks.server.GlobalStateMgr;
-import com.starrocks.server.LocalMetastore;
 import com.starrocks.sql.ast.DistributionDesc;
 import com.starrocks.sql.ast.expression.DateLiteral;
 import com.starrocks.sql.ast.expression.LiteralExpr;
@@ -63,13 +61,9 @@ public class PartitionUtils {
                                                           List<Long> tmpPartitionIds,
                                                           DistributionDesc distributionDesc,
                                                           ComputeResource computeResource) throws DdlException {
-        LocalMetastore localMetastore = GlobalStateMgr.getCurrentState().getLocalMetastore();
-        // Snapshot the colocation meta group that the lock-free tablet creation below pins the new
-        // shards to; re-validated under the WRITE lock before commit.
-        ColocateTableIndex.GroupId metaGroupColocateGroupId = GlobalStateMgr.getCurrentState()
-                .getColocateTableIndex().getMetaGroupColocateGroupId(targetTable.getId());
-        List<Partition> newTempPartitions = localMetastore.createTempPartitionsFromPartitions(db, targetTable,
-                postfix, sourcePartitionIds, tmpPartitionIds, distributionDesc, computeResource);
+        List<Partition> newTempPartitions = GlobalStateMgr.getCurrentState().getLocalMetastore()
+                .createTempPartitionsFromPartitions(db, targetTable, postfix, sourcePartitionIds,
+                        tmpPartitionIds, distributionDesc, computeResource);
         Locker locker = new Locker();
         if (!locker.lockTableAndCheckDbExist(db, targetTable.getId(), LockType.WRITE)) {
             throw new DdlException("create and add partition failed. database:{}" + db.getFullName() + " not exist");
@@ -84,37 +78,57 @@ public class PartitionUtils {
             if (sourcePartitionIds.stream().anyMatch(id -> targetTable.getPartition(id) == null)) {
                 throw new DdlException("create partition failed because src partitions changed");
             }
-            localMetastore.checkIfColocateMetaGroupChange(targetTable, metaGroupColocateGroupId, targetTable.getName());
             List<Partition> sourcePartitions = sourcePartitionIds.stream()
-                    .map(targetTable::getPartition).toList();
+                    .map(id -> targetTable.getPartition(id)).collect(Collectors.toList());
             PartitionInfo partitionInfo = targetTable.getPartitionInfo();
             List<PartitionPersistInfoV2> partitionInfoV2List = Lists.newArrayListWithCapacity(newTempPartitions.size());
             for (int i = 0; i < newTempPartitions.size(); i++) {
+                targetTable.addTempPartition(newTempPartitions.get(i));
                 long sourcePartitionId = sourcePartitions.get(i).getId();
+                partitionInfo.addPartition(newTempPartitions.get(i).getId(),
+                        partitionInfo.getDataProperty(sourcePartitionId),
+                        partitionInfo.getReplicationNum(sourcePartitionId),
+                        partitionInfo.getDataCacheInfo(sourcePartitionId));
                 Partition partition = newTempPartitions.get(i);
 
                 PartitionPersistInfoV2 info;
                 if (partitionInfo.isRangePartition()) {
                     RangePartitionInfo rangePartitionInfo = (RangePartitionInfo) partitionInfo;
-                    Range<PartitionKey> range = rangePartitionInfo.getRange(sourcePartitionId);
+                    rangePartitionInfo.setRange(partition.getId(), true,
+                            rangePartitionInfo.getRange(sourcePartitionId));
+                    Range<PartitionKey> range = rangePartitionInfo.getRange(partition.getId());
 
                     info = new RangePartitionPersistInfo(db.getId(), targetTable.getId(),
-                            partition, partitionInfo.getDataProperty(sourcePartitionId),
-                            partitionInfo.getReplicationNum(sourcePartitionId),
-                            true, range, partitionInfo.getDataCacheInfo(sourcePartitionId));
+                            partition, partitionInfo.getDataProperty(partition.getId()),
+                            partitionInfo.getReplicationNum(partition.getId()),
+                            true, range, partitionInfo.getDataCacheInfo(partition.getId()));
                 } else if (partitionInfo.isUnPartitioned()) {
                     info = new SinglePartitionPersistInfo(db.getId(), targetTable.getId(),
-                            partition, partitionInfo.getDataProperty(sourcePartitionId),
-                            partitionInfo.getReplicationNum(sourcePartitionId),
-                            true, partitionInfo.getDataCacheInfo(sourcePartitionId));
+                            partition, partitionInfo.getDataProperty(partition.getId()),
+                            partitionInfo.getReplicationNum(partition.getId()),
+                            true, partitionInfo.getDataCacheInfo(partition.getId()));
                 } else if (partitionInfo.isListPartition()) {
                     ListPartitionInfo listPartitionInfo = (ListPartitionInfo) partitionInfo;
+
+                    listPartitionInfo.setIdToIsTempPartition(partition.getId(), true);
                     List<String> values = listPartitionInfo.getIdToValues().get(sourcePartitionId);
+                    if (values != null) {
+                        listPartitionInfo.setValues(partition.getId(), values);
+                        List<LiteralExpr> literalExprs = listPartitionInfo.getLiteralExprValues().get(sourcePartitionId);
+                        listPartitionInfo.setDirectLiteralExprValues(partition.getId(), literalExprs);
+                    }
+
                     List<List<String>> multiValues = listPartitionInfo.getIdToMultiValues().get(sourcePartitionId);
+                    if (multiValues != null) {
+                        listPartitionInfo.setMultiValues(partition.getId(), multiValues);
+                        List<List<LiteralExpr>> multiLiteralExprs =
+                                listPartitionInfo.getMultiLiteralExprValues().get(sourcePartitionId);
+                        listPartitionInfo.setDirectMultiLiteralExprValues(partition.getId(), multiLiteralExprs);
+                    }
                     info = new ListPartitionPersistInfo(db.getId(), targetTable.getId(),
-                            partition, partitionInfo.getDataProperty(sourcePartitionId),
-                            partitionInfo.getReplicationNum(sourcePartitionId),
-                            true, values, multiValues, partitionInfo.getDataCacheInfo(sourcePartitionId));
+                            partition, partitionInfo.getDataProperty(partition.getId()),
+                            partitionInfo.getReplicationNum(partition.getId()),
+                            true, values, multiValues, partitionInfo.getDataCacheInfo(partition.getId()));
                 } else {
                     throw new DdlException("Unsupported partition persist info.");
                 }
@@ -122,41 +136,7 @@ public class PartitionUtils {
             }
 
             AddPartitionsInfoV2 infos = new AddPartitionsInfoV2(partitionInfoV2List);
-            GlobalStateMgr.getCurrentState().getEditLog().logAddPartitions(infos, wal -> {
-                for (int i = 0; i < newTempPartitions.size(); i++) {
-                    Partition partition = newTempPartitions.get(i);
-                    long sourcePartitionId = sourcePartitions.get(i).getId();
-                    targetTable.addTempPartition(partition);
-                    partitionInfo.addPartition(partition.getId(),
-                            partitionInfo.getDataProperty(sourcePartitionId),
-                            partitionInfo.getReplicationNum(sourcePartitionId),
-                            partitionInfo.getDataCacheInfo(sourcePartitionId));
-
-                    if (partitionInfo.isRangePartition()) {
-                        RangePartitionInfo rangePartitionInfo = (RangePartitionInfo) partitionInfo;
-                        rangePartitionInfo.setRange(partition.getId(), true,
-                                rangePartitionInfo.getRange(sourcePartitionId));
-                    } else if (partitionInfo.isListPartition()) {
-                        ListPartitionInfo listPartitionInfo = (ListPartitionInfo) partitionInfo;
-                        listPartitionInfo.setIdToIsTempPartition(partition.getId(), true);
-                        List<String> values = listPartitionInfo.getIdToValues().get(sourcePartitionId);
-                        if (values != null) {
-                            listPartitionInfo.setValues(partition.getId(), values);
-                            List<LiteralExpr> literalExprs =
-                                    listPartitionInfo.getLiteralExprValues().get(sourcePartitionId);
-                            listPartitionInfo.setDirectLiteralExprValues(partition.getId(), literalExprs);
-                        }
-
-                        List<List<String>> multiValues = listPartitionInfo.getIdToMultiValues().get(sourcePartitionId);
-                        if (multiValues != null) {
-                            listPartitionInfo.setMultiValues(partition.getId(), multiValues);
-                            List<List<LiteralExpr>> multiLiteralExprs =
-                                    listPartitionInfo.getMultiLiteralExprValues().get(sourcePartitionId);
-                            listPartitionInfo.setDirectMultiLiteralExprValues(partition.getId(), multiLiteralExprs);
-                        }
-                    }
-                }
-            });
+            GlobalStateMgr.getCurrentState().getEditLog().logAddPartitions(infos);
 
             success = true;
         } finally {
